src/test/ui/generic-associated-types/issue-67424.stderr
error[E0658]: generic associated types are unstable
  --> $DIR/issue-67424.rs:8:5
   |
LL |     type Type1<B>: Trait1<A=B>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information
   = help: add `#![feature(generic_associated_types)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
